# Rustle

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  EXACT_STRINGTIE_PARITY_PLAN.md  GUIDED_MODE_ANALYSIS.md  LICENSE  MULTI_COPY_FAMILY_PROOF.md  PRECISION_DIAGNOSTIC_FINDINGS.md  PRECISION_IMPROVEMENT_PLAN.md  PRECISION_WORK_CONTINUATION.md  README.md  SESSION_SUMMARY_2026_05_18.md  analyze_missed_patterns.py  analyze_novel.py  find_missed_loci.py  precision_analysis.py  precision_diagnostic.txt  run_precision_diagnostic.sh
.cargo/: config.toml
bench/: ggo19_needy_next5.commands.sh  ggo19_needy_next5.panel.tsv  ggo19_needy_next5_batch_summary.tsv  ggo19_needy_next5_run_STRG_29.needy_bundle_summary.tsv  ggo19_needy_next5_run_STRG_29_cmp.ggo19_needy_next5_run_STRG_29.gtf.refmap  ggo19_needy_next5_run_STRG_29_cmp.ggo19_needy_next5_run_STRG_29.gtf.tmap  ggo19_needy_next5_run_STRG_29_cmp.loci  ggo19_needy_next5_run_STRG_29_cmp.stats  ggo19_needy_next5_run_STRG_29_cmp.tracking  ggo19_needy_next5_run_STRG_440.needy_bundle_summary.tsv  ggo19_needy_next5_run_STRG_440.trace.txt  ggo19_needy_next5_run_STRG_440_cmp.ggo19_needy_next5_run_STRG_440.gtf.refmap  ggo19_needy_next5_run_STRG_440_cmp.ggo19_needy_next5_run_STRG_440.gtf.tmap  ggo19_needy_next5_run_STRG_440_cmp.loci  ggo19_needy_next5_run_STRG_440_cmp.stats  ggo19_needy_next5_run_STRG_440_cmp.tracking  ggo19_needy_next5_run_STRG_442.needy_bundle_summary.tsv  ggo19_needy_next5_run_STRG_442_cmp.ggo19_needy_next5_run_STRG_442.gtf.refmap  ggo19_needy_next5_run_STRG_442_cmp.ggo19_needy_next5_run_STRG_442.gtf.tmap  ggo19_needy_next5_run_STRG_442_cmp.loci  ggo19_needy_next5_run_STRG_442_cmp.stats  ggo19_needy_next5_run_STRG_442_cmp.tracking  ggo19_needy_next5_run_STRG_445.needy_bundle_summary.tsv  ggo19_needy_next5_run_STRG_445.trace.txt  ggo19_needy_next5_run_STRG_445_cmp.ggo19_needy_next5_run_STRG_445.gtf.refmap  ggo19_needy_next5_run_STRG_445_cmp.ggo19_needy_next5_run_STRG_445.gtf.tmap  ggo19_needy_next5_run_STRG_445_cmp.loci  ggo19_needy_next5_run_STRG_445_cmp.stats  ggo19_needy_next5_run_STRG_445_cmp.tracking  ggo19_needy_next5_run_STRG_566.needy_bundle_summary.tsv  ggo19_needy_next5_run_STRG_566.trace.txt  ggo19_needy_next5_run_STRG_566_cmp.ggo19_needy_next5_run_STRG_566.gtf.refmap  ggo19_needy_next5_run_STRG_566_cmp.ggo19_needy_next5_run_STRG_566.gtf.tmap  ggo19_needy_next5_run_STRG_566_cmp.loci  ggo19_needy_next5_run_STRG_566_cmp.stats  ggo19_needy_next5_run_STRG_566_cmp.tracking  ggo19_needy_top15.commands.sh  ggo19_needy_top15.panel.md  ggo19_needy_top15.panel.tsv  ggo19_needy_top5.commands.sh  (+52 more)
docs/: ALGORITHMS.md  CONTINUATION_2026_05_11.md  NETWORK_FLOW_WALKTHROUGH.md  SESSION_CONTINUATION.md  STRINGTIE_LONGREAD_PARITY_CONTINUATION_GUIDE.md  STRINGTIE_PARITY_SYSTEMATIC.md  SUBBUNDLE_PARITY_HANDOFF.md  UNMAPPED_FAMILY_RESCUE.md
figures/: 01_pipeline_overview.md  02_vg_novel_copy_rescue.md  03_multi_mapping_resolution.md  04_avoiding_assembly_artifacts.md  README.md
scripts/: analyze_explainable_backward_blockers.py  analyze_gffcompare_gap.py  analyze_missing_ref_recovery.py  analyze_partition_segment_drift.py  build_ground_truth_gtf.sh  build_needy_ref_panel.py  build_overprediction_panel_from_gffcompare.py  build_rustle_mini_panel.py  bundle_backward_oracle_table.py  bundle_blocker_terminal_categories.py  bundle_chain_blockers.py  bundle_chain_delta.py  bundle_exact_blocker_neighbors.py  bundle_family_stage_audit.py  bundle_terminal_variant_audit.py  chr19_bundle_audit.awk  classify_exact_chain_boundary_blockers.py  classify_keeptrf_divergence.py  collapse_reference_by_chain.py  compare_gtf_attrs_exact_matches.py  compare_junction_parity.py  compare_live_parity_to_backward.py  compare_locus_graph_tables.py  compare_partition_geometry.py  compare_rlink_keeptrf_bnode.py  create_ground_truth.sh  (+44 more)
(+292 files in other folders)
